# reml

./: .gitignore  0-0-overview.md  0-1-overview.md  0-1-project-purpose.md  0-2-glossary.md  0-2-project-purpose.md  0-3-code-style-guide.md  1-0-language-core-overview.md  1-1-syntax.md  1-2-types-Inference.md  1-3-effects-safety.md  1-4-test-unicode-model.md  1-5-formal-grammar-bnf.md  2-0-parser-api-overview.md  2-1-parser-type.md  2-1-perser-type.md  2-2-core-combinator.md  2-3-lexer.md  2-4-op-builder.md  2-5-error.md  2-6-execution-strategy.md  2-7-config.md  2-7-core-parse-streaming.md  2-8-data.md  2-9-runtime.md  3-0-core-library-overview.md  3-1-bnf.md  3-1-core-prelude-iteration.md  3-10-core-env.md  3-11-core-system.md  3-12-core-process.md  3-13-core-memory.md  3-14-core-signal.md  3-15-core-hardware.md  3-16-core-realtime.md  3-2-core-collections.md  3-3-core-text-unicode.md  3-4-core-numeric-time.md  3-5-core-io-path.md  3-6-core-diagnostics-audit.md  (+65 more)
benchmarks/: Cargo.toml
benchmarks/parse/: profile.rs
benchmarks/src/: lib.rs
benchmarks/text/: builder.rs  grapheme.rs  normalization.rs
benchmarks/text/data/: multilingual.txt
compiler/c/: CMakeLists.txt
compiler/c/cmake/: FetchDependencies.cmake
compiler/c/lib/core/: Core.reml  README.md
compiler/c/lib/runtime/: CMakeLists.txt  runtime.c  runtime.h
compiler/c/src/: main.c
compiler/c/src/ast/: ast.c  printer.c
compiler/c/src/codegen/: codegen.c
compiler/c/src/lexer/: lexer.c
compiler/c/src/manifest/: manifest.c
compiler/c/src/mir/: mir.c
compiler/c/src/numeric/: bigint.c  core_numeric.c
compiler/c/src/parser/: operator_table.c  parser.c
compiler/c/src/runtime/: effects.c  effects_core.c  enum.c  string.c
compiler/ocaml/: --experimental-effects  .gitignore  README.md  dune-project  fix_parser.sed  reml_ocaml.opam  test_no_string.ll  test_runtime_link.ll  test_trace.ll
compiler/ocaml/benchmarks/: macro_typeclass.reml  micro_typeclass.reml  simple_bench.reml  test_simple.reml
compiler/ocaml/docs/: cli-design.md  cli-refactoring-plan.md  effect-system-design-note.md  environment-setup-completed.md  environment-setup.md  llvm-codegen-week13-progress.md  llvm-ir-verification.md  llvm-type-mapping.md  parser_design.md  phase1-5-completion-report.md  phase1-5-llvm-integration-report.md  phase1-6-completion-report.md  phase1-7-completion-report.md  phase1-8-completion-report.md  phase1-completion-report.md  phase1-to-phase2-handover.md  phase2-checklist.md  phase2-completion-report.md  phase2-handover.md  phase2-startup-checklist.md  phase3-handover.md  phase3-m3-completion-report.md  phase3-remaining-tasks.md  phase3-to-phase2-handover.md  phase3-week10-11-completion.md  phase3-week10-progress.md  phase3-week14-15-abi-completion.md  runtime-api-integration-status.md  technical-debt.md  test_implementation_summary.md  work-log-2025-10-06.md
compiler/ocaml/scripts/: benchmark_typeclass.sh  gen_llvm_link_flags.py  verify_llvm_ir.sh
compiler/ocaml/src/: ast.ml  ast_printer.ml  audit_envelope.ml  constraint.ml  constraint_solver.ml  constraint_solver.mli  core_parse.ml  core_parse.mli  core_parse_lex.ml  core_parse_lex.mli  core_parse_lex_record.ml  core_parse_lex_record.mli  core_parse_streaming.ml  core_parse_streaming.mli  diagnostic.ml  diagnostic_builder.ml  diagnostic_builder.mli  diagnostic_serialization.ml  diagnostic_serialization.mli  dune  effect_profile.ml  ffi_contract.ml  impl_registry.ml  impl_registry.mli  lexer.mll  main.ml  module_env.ml  parser.mly  parser_diag_state.ml  parser_driver.ml  parser_expectation.ml  parser_expectation.mli  parser_flags.ml  parser_flags.mli  parser_run_config.ml  parser_run_config.mli  runtime_bridge_registry.ml  runtime_bridge_registry.mli  runtime_capability_loader.ml  runtime_capability_resolver.ml  (+8 more)
compiler/ocaml/tests/: capability_profile_tests.ml  core_parse_lex_tests.ml  dune  effect_analysis_tests.ml  effect_handler_poc_tests.ml  effect_syntax_tests.ml  packrat_tests.ml  qualified_patterns.reml  run_config_tests.ml  streaming_runner_tests.ml  test_abi.ml  test_cfg.ml  test_cli_callconv_snapshot.ml  test_cli_diagnostics.ml  test_cli_llvm.reml  test_cli_trace.ml  test_const_fold.ml  test_constraint_solver.ml  test_core_ir.ml  test_dce.ml  test_desugar.ml  test_dict_gen.ml  test_effect_residual.ml  test_ffi_contract.ml  test_ffi_lowering.ml  test_ffi_stub_builder.ml  test_golden.ml  test_impl_registry.ml  test_let_polymorphism.ml  test_lexer.ml  test_llvm_array_access.ml  test_llvm_golden.ml  test_llvm_type_mapping.ml  test_llvm_verify.ml  test_module_env.ml  test_monomorphize_poc.ml  test_parse_result_state.ml  test_parser.ml  test_parser_driver.ml  test_parser_expectation.ml  (+15 more)
compiler/runtime/: Cargo.toml  README.md
compiler/runtime/benches/: time_clock.rs
compiler/runtime/examples/: schema_diff_demo.rs
compiler/runtime/ffi/: README.md  build.rs
compiler/runtime/native/: .gitignore  Makefile  README.md
compiler/runtime/src/: anyhow.rs  env.rs  stage.rs  test_support.rs
compiler/runtime/tests/: audit_capability.rs  audit_validation.rs  buffered_reader.rs  capability_text_audit.rs  conductor_contract.rs  config_compat.rs  core_io_capabilities.rs  core_system_api.rs  grapheme_conformance.rs  leak_detection.rs  manifest.rs  manifest_validation.rs  metrics_capability.rs  normalization_conformance.rs  path_glob.rs  path_normalize.rs  path_security.rs  path_string_utils.rs  plugin_bridge.rs  plugin_loader.rs  stage_order.rs  text_internal_cache.rs  text_stream.rs  unicode_width_mapping.rs  watcher.rs
compiler/rust/ffi_bindgen/: Cargo.toml
compiler/rust/frontend/: Cargo.toml
compiler/rust/runtime/: Cargo.toml
runtime/native/: .gitignore  CMakeLists.txt  Makefile  README.md
runtime/native/include/: reml_ffi_bridge.h  reml_os.h  reml_runtime.h
runtime/native/src/: boxing.c  ffi_bridge.c  mem_alloc.c  os.c  panic.c  print_i64.c  record.c  refcount.c  set.c  string_data.c
runtime/native/tests/: test_boxing.c  test_ffi_bridge.c  test_os.c  test_refcount.c  test_set.c
tooling/review/tests/: dune
(+8286 files in other folders)
