(lang dune 3.0)
(name reml_ocaml)
(using menhir 2.1)

(generate_opam_files true)

(source (github dolphilia/kestrel))
(license MIT)
(authors "Reml Project")
(maintainers "Reml Project")

(package
 (name reml_ocaml)
 (synopsis "Reml compiler bootstrap (OCaml implementation)")
 (description "Phase 1 bootstrap implementation of the Reml compiler in OCaml")
 (depends
  (ocaml (>= 4.14))
  (dune (>= 3.0))
  (menhir (>= 20201216))))
