; Dune ビルド設定 — Reml OCaml コンパイラ (Phase 1-2)

(ocamllex lexer)

(menhir
 (modules parser)
 (flags --explain --table --external-tokens Token))

(library
 (name reml_parser)
 (public_name reml_ocaml.parser)
 (wrapped false)
 (modules
  ast
  ast_printer
  token
  lexer
  parser
  diagnostic
  diagnostic_builder
  diagnostic_serialization
  parser_driver
  types
  type_env
  constraint
  effect_profile
  constraint_solver
  audit_envelope
  ffi_contract
  impl_registry
  type_error
  typed_ast
  runtime_capability_resolver
  type_inference_effect
  type_inference)
 (libraries menhirLib yojson unix))

(executable
 (name main)
 (public_name remlc)
 (package reml_ocaml)
 (modules main)
 (libraries cli reml_parser reml_ocaml.core_ir reml_ocaml.llvm_gen uuidm))
