; Dune テストルール — Reml OCaml コンパイラテスト

(tests
 (names
 test_lexer
 test_parser
 test_parser_expectation
 test_parser_driver
 core_parse_lex_tests
 run_config_tests
 test_module_env
 test_parse_result_state
 test_golden
  test_pattern_matching
  test_types
  test_type_inference
  test_type_errors
  test_let_polymorphism
  test_constraint_solver
  test_impl_registry
  test_core_ir
  test_desugar
  test_dict_gen
  test_cfg
  test_const_fold
  test_dce
  test_pipeline
  test_llvm_type_mapping
  test_llvm_array_access
  test_abi
  test_llvm_verify
  test_llvm_golden
  test_cli_diagnostics
  test_cli_trace
  test_typeclass_llvm
  test_typeclass_execution
  test_typeclass_mode
  test_typeclass_effects
  effect_analysis_tests
  test_effect_residual
  test_cli_callconv_snapshot
  test_ffi_contract
  test_ffi_stub_builder
  test_ffi_lowering
  test_monomorphize_poc
  test_user_impl_llvm
  test_user_impl_execution)
 (libraries
  reml_parser
  reml_ocaml.core_ir
  reml_ocaml.llvm_gen
  reml_ocaml.ffi_codegen
  cli
  reml_test_support
  llvm
  unix
  str
  yojson))
