[package]
name = "reml_ffi_bindgen"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "reml_ffi_bindgen"
path = "src/lib.rs"

[[bin]]
name = "reml-bindgen"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = { version = "0.5", features = ["preserve_order"] }
sha2 = "0.10"
regex = "1.10"
