[package]
name = "reml_frontend"
version = "0.0.0"
edition = "2021"
publish = false

# TODO: `repository` や `license` は Rust 実装全体のガイドライン確定後に追加する

[lib]
name = "reml_frontend"
path = "src/lib.rs"

[features]
default = []
# lexer-backend と parser-backend は候補クレートの評価完了後に定義する

[dependencies]
logos = "0.13"
chumsky = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "1.9", features = ["serde"] }
smallvec = { version = "1.11", features = ["serde"] }
smol_str = { version = "0.2", features = ["serde"] }
once_cell = "1.19"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.9"
