[package]
name = "reml_runtime"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
unicode_full = []
core_numeric = []
"core-numeric" = ["core_numeric"]

[[bin]]
name = "text_stream_decode"
path = "examples/io/text_stream_decode.rs"

[dependencies]
unicode-segmentation = "1.11"
unicode-width = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "1.9"
unicode-normalization = "0.1"
once_cell = "1.19"
ordered-float = "4.2"

[dev-dependencies]
humantime = "2.1"
criterion = { version = "0.3", default-features = false }

[[bench]]
name = "bench_numeric_statistics"
harness = false
