[package]
name = "reml_runtime"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
unicode_full = []
decimal = ["rust_decimal"]
bigint = ["num-bigint"]
ratio = ["num-rational", "bigint"]
core_numeric = ["decimal", "bigint", "ratio"]
"core-numeric" = ["core_numeric"]
core_time = []
"core-time" = ["core_time"]

[[bin]]
name = "text_stream_decode"
path = "examples/io/text_stream_decode.rs"

[dependencies]
unicode-segmentation = "1.11"
unicode-width = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "1.9"
unicode-normalization = "0.1"
once_cell = "1.19"
ordered-float = "4.2"
time = { version = "0.3.30", features = ["local-offset", "formatting", "parsing"] }
rust_decimal = { version = "1.34", optional = true }
num-bigint = { version = "0.4", optional = true, features = ["serde"] }
num-rational = { version = "0.4", optional = true }

[dev-dependencies]
humantime = "2.1"
criterion = { version = "0.3", default-features = false }

[[bench]]
name = "bench_numeric_statistics"
harness = false
