[package]
name = "reml_runtime"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
unicode_full = []
metrics = []
decimal = ["rust_decimal"]
bigint = ["num-bigint"]
ratio = ["num-rational", "bigint"]
core_numeric = ["decimal", "bigint", "ratio", "metrics"]
"core-numeric" = ["core_numeric"]
core_time = ["metrics"]
"core-time" = ["core_time"]
core_io = []
"core-io" = ["core_io"]
core_path = []
"core-path" = ["core_path"]

[[bin]]
name = "text_stream_decode"
path = "examples/io/text_stream_decode.rs"

[dependencies]
uuid = { version = "1.8", features = ["serde"] }
unicode-segmentation = "1.11"
unicode-width = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "1.9"
unicode-normalization = "0.1"
once_cell = "1.19"
ordered-float = "4.2"
toml = { version = "0.5", features = ["preserve_order"] }
time = { version = "=0.3.30", features = ["local-offset", "formatting", "parsing"] }
notify = "6.1"
glob = "0.3"
rust_decimal = { version = "1.34", optional = true }
num-bigint = { version = "0.4", optional = true, features = ["serde"] }
num-rational = { version = "0.4", optional = true }

[patch.crates-io]
proc-macro-crate = { path = "../../../third_party/proc_macro_crate" }

[dev-dependencies]
humantime = "2.1"
criterion = { version = "0.3", default-features = false }
proptest = { version = "=1.2.0", default-features = false, features = ["std"] }
tempfile = "3.10"
insta = { version = "1.44", features = ["yaml"] }

[[bench]]
name = "bench_numeric_statistics"
harness = false

[[bench]]
name = "bench_core_io"
harness = false

[[bench]]
name = "time_clock"
harness = false
