; Dune ビルド設定 — LLVM IR 生成 (Phase 3 Week 12-16)

(library
 (name llvm_gen)
 (public_name reml_ocaml.llvm_gen)
 (wrapped false)
 (modules
  type_mapping
  target_config
  llvm_attr
  abi
  ffi_value_lowering
  codegen
  verify
  runtime_link)
 (libraries
  llvm
  llvm.bitwriter
  reml_ocaml.core_ir
  reml_parser
  reml_ocaml.ffi_codegen
  unix)
 (foreign_stubs
  (language c)
  (names llvm_attr_stubs)))
