[package]
name = "reml_runtime_ffi"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[lib]
name = "reml_runtime_ffi"
path = "src/lib.rs"

[features]
default = []
core_prelude = []

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.18"
toml = "0.5"
reml_adapter = { path = "../../adapter" }

[dev-dependencies]
tempfile = "3.9"
