[package]
name = "reml_runtime_ffi"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[lib]
name = "reml_runtime_ffi"
path = "src/lib.rs"

[features]
default = []
core_prelude = []

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.18"
toml = "0.5"
reml_adapter = { path = "../../adapter" }
indexmap = "1.9"
unicode-segmentation = "1.11"
unicode-width = "0.1"
unicode-normalization = "0.1"
notify = "6.1"
glob = "0.3"
time = { version = "=0.3.30", features = ["local-offset", "formatting", "parsing"] }
ordered-float = "4.2"

[dev-dependencies]
tempfile = "3.9"

[[bench]]
name = "core_collections_persistent"
harness = false
